# fomo-calc-app

./: .gitignore  Dockerfile  FIX_ERROR.md  FIX_PYTHON314.md  Makefile  QUICKSTART.md  README.md  README_LOCAL.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
farmcalc/: __init__.py  api.py  logging_config.py  main.py  settings.py
farmcalc/clients/: __init__.py  coingecko.py  hyperliquid.py  telegram.py
farmcalc/models/: __init__.py  domain.py
farmcalc/services/: __init__.py  calc.py  fill_model.py  pricing.py  proposals.py  scoring.py  sentiment.py  telegram_control.py  telegram_queue.py  watcher.py
farmcalc/storage/: __init__.py  cache_store.py  state_store.py
farmcalc/ui/: __init__.py  output.py  tables.py
tests/: __init__.py  test_calc.py  test_fill_model.py  test_pricing.py  test_scoring.py  test_telegram_control.py
