[tool.poetry]
name = "farmcalc"
version = "1.0.0"
description = "Hyperliquid perp farming calculator with CLI and FastAPI"
authors = ["FarmCalc Contributors"]
readme = "README.md"
license = "MIT"
packages = [{include = "farmcalc"}]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.24.0"
typer = {extras = ["all"], version = "^0.9.0"}
rich = "^13.0.0"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
requests = "^2.31.0"
pydantic = "^2.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
ruff = "^0.1.0"

[tool.poetry.scripts]
farmcalc = "farmcalc.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
